load("//tools:def.bzl", "pkg_zip", "syn_deployable", "syn_file_asset")

pkg_zip(
    name = "bundled_storybook_master",
    srcs = [
        "//eng/shared/design-system/web:storybook_build",
    ],
    remap_paths = {"{gendir}/eng/shared/design-system/web/storybook_build": "master"},
    visibility = ["//visibility:public"],
)

pkg_zip(
    name = "bundled_storybook_feature",
    srcs = [
        "//eng/shared/design-system/web:storybook_build",
    ],
    remap_paths = {"{gendir}/eng/shared/design-system/web/storybook_build": "feature/YOUR_FEATURE_BRANCH_NAME"},
    visibility = ["//visibility:public"],
)

syn_deployable(
    name = "design-system",
    assets = [
        syn_file_asset(
            name = "bundled_storybook_asset",
            src = ":bundled_storybook_master",
            bucket = "coinbase-design-system-web-storybook",
            is_zip = True,
        ),
    ],
    config_name = "storybook",  # config_name (i.e. Codeflow's config_name)
    target = "development",  # environment to deploy to
)

syn_deployable(
    name = "design-system-feature",
    assets = [
        syn_file_asset(
            name = "bundled_storybook_asset_feature",
            src = ":bundled_storybook_feature",
            bucket = "coinbase-design-system-web-storybook",
            is_zip = True,
        ),
    ],
    config_name = "storybook",  # config_name (i.e. Codeflow's config_name)
    target = "development",  # environment to deploy to
)
