load("//tools/js:def.bzl", "eslint_test", "ts_package")

# Files to publish to NPM
filegroup(
    name = "runtime_source",
    srcs = glob(
        [
            "**/*.ts",
            "**/*.tsx",
        ],
        exclude = [
            "**/*.test.*",
        ],
    ),
    visibility = ["//visibility:public"],
)

# All files to lint and test
filegroup(
    name = "source",
    srcs = [":runtime_source"] + glob(
        [
            "**/*.test.*",
            "**/*.mdx",
        ],
    ),
    visibility = ["//visibility:public"],
)

# Run the linter
eslint_test(
    name = "lint",
    lints = [":source"],
)

# Package building and publishing
ts_package(
    name = "package",
    package_name = "@cbhq/cds-<name>",
    srcs = [":runtime_source"],
    dev_deps = [],
    peer_deps = [],
    relative_source_directory = ".",
    static_files = {
        ":CHANGELOG.md": "./CHANGELOG.md",
        ":README.md": "./README.md",
    },
    typescript_config = ":tsconfig.build.json",
    deps = [],
)
